[gd_scene load_steps=4 format=3 uid="uid://rv25bmxi8hqe"]

[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1_wbjc5"]
[ext_resource type="PackedScene" uid="uid://b1f1f4a75hdro" path="res://ui/main_menu/screens/title_screen/title_screen.tscn" id="2_v6v35"]
[ext_resource type="PackedScene" uid="uid://cd6rgf15naw10" path="res://ui/main_menu/screens/credits/credits.tscn" id="3_dkuqe"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wbjc5")

[node name="TitleScreen" parent="." instance=ExtResource("2_v6v35")]
layout_mode = 1

[node name="Credits" parent="." instance=ExtResource("3_dkuqe")]
visible = false
layout_mode = 1

[connection signal="credits_pressed" from="TitleScreen" to="." method="_on_title_screen_credits_pressed"]
[connection signal="quit_pressed" from="TitleScreen" to="." method="_on_title_screen_quit_pressed"]
[connection signal="settings_pressed" from="TitleScreen" to="." method="_on_title_screen_settings_pressed"]
[connection signal="start_pressed" from="TitleScreen" to="." method="_on_title_screen_start_pressed"]
[connection signal="back_pressed" from="Credits" to="." method="_on_credits_back_pressed"]
